[project]
name = "donglora-examples"
version = "0.1.0"
description = "DongLoRa example scripts"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "donglora",
]

[project.optional-dependencies]
meshcore = ["donglora[meshcore]"]
orac = ["donglora[orac]"]

[dependency-groups]
dev = ["ruff"]

[tool.uv]
package = false

[tool.uv.sources]
donglora = { path = "../client-py", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "ARG", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["donglora"]
