[project]
name = "donglora-examples"
version = "1.0.0"
description = "DongLoRa example scripts"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "donglora>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
meshcore = ["donglora[meshcore]>=1.0.0,<2.0.0"]
orac = ["donglora[orac]>=1.0.0,<2.0.0"]

[dependency-groups]
dev = ["ruff"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "ARG", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["donglora"]
